fix: code blocks overflowing

--- a/frontend/src/components/layout/textLayout/textLayout.module.css
+++ b/frontend/src/components/layout/textLayout/textLayout.module.css
@@ -33,4 +33,8 @@
   & li {
     margin-block: 0.5em;
   }
+
+  & pre {
+    white-space: break-spaces;
+  }
 }
